# llm-unlearning-experiments

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: smoke_gpt2.yaml  smoke_synthetic.yaml  smoke_synthetic_npo.yaml  sweep_tofu.yaml  tofu_colab.yaml  tofu_llama1b.yaml
notebooks/: colab_run.ipynb  colab_sweep.ipynb  kaggle_sweep.ipynb
scripts/: make_paper_figures.py  run_experiment.py  verify_gpu.py
src/unlearning/: __init__.py  attacks.py  cli.py  config.py  data.py  evaluate.py  plotting.py  seed.py  sweep.py  unlearn.py
tests/: test_metrics.py  test_seed.py  test_sweep.py
tofu_colab_results/results/tofu_colab_gpt2med/: config.resolved.json  metrics.json  scores.npz
